--- a/Batallion/src/app/app.component.html
+++ b/Batallion/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center" class = "container" style="text-align: center" >
   <h1>
-  Batallion
+  Batallion 2
   </h1>
   <hr>
   <div>   
