Basic nav bar created and Home html basic desgin

--- a/Batallion/src/app/app.component.html
+++ b/Batallion/src/app/app.component.html
@@ -1,13 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" class = "container" style="text-align: center" >
-  <h1>
-  Batallion 2.2
-  </h1>
-  <hr>
-  <div>   
-      <h2>The Complete riders choice</h2>
+<nav-bar></nav-bar>
+<div class="container">
+  
+  <div>
+    <img src="assets/images/batalion-logo3.png" alt="logo" height="200px" width="270px" />
+
   </div>
+  
 </div>
-
-
-
