changes to html

--- a/Batallion/src/app/app.component.html
+++ b/Batallion/src/app/app.component.html
@@ -3,8 +3,9 @@
 <div class="container">
   
   <div>
-    <img src="assets/images/batalion-logo3.png" alt="logo" height="200px" width="270px" />
+    <img src="assets/images/batalion-logo3.png" alt="logo" height="200px" width="270px"/>
 
   </div>
-  
+ 
+  <router-outlet></router-outlet>
 </div>
