--- a/Batallion/src/app/app.component.html
+++ b/Batallion/src/app/app.component.html
@@ -1,11 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
 <nav-bar></nav-bar>
+<img src="assets/images/batalion-logo3.png" alt="logo" height="120px" width="170px" style="margin-left: 45%"/>
 <div class="container">
   
-  <div>
-    <img src="assets/images/batalion-logo3.png" alt="logo" height="200px" width="270px"/>
-
-  </div>
+ 
  
   <router-outlet></router-outlet>
 </div>
