--- a/Batallion/src/app/nav-bar/nav-bar.component.html
+++ b/Batallion/src/app/nav-bar/nav-bar.component.html
@@ -1,21 +1,25 @@
 <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#" style="color: yellow">BATALION</a>
+            <a class="navbar-brand" href="#" style="color: yellow; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 40px;margin-left: 50px">BATALION</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active" style="margin-left: 40px"><a href="#">Home</a></li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Product
+              <a class="dropdown-toggle" data-toggle="dropdown" >Products
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Page 1-1</a></li>
+                <li><a [routerLink]="['product']">Page 1-1</a></li>
                 <li><a href="#">Page 1-2</a></li>
                 <li><a href="#">Page 1-3</a></li>
               </ul>
             </li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Gallery</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
         </div>
       </nav>
