added some data and created table

--- a/Batallion/src/app/app.component.html
+++ b/Batallion/src/app/app.component.html
@@ -1,10 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div>
+  <nav-bar></nav-bar>
+  <img src="assets/images/batalion-logo3.png" alt="logo" height="120px" width="170px" style="margin-left: 45%" />
+  <div>
 
-<nav-bar></nav-bar>
-<img src="assets/images/batalion-logo3.png" alt="logo" height="120px" width="170px" style="margin-left: 45%"/>
-<div class="container">
-  
- 
- 
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+  </div>
 </div>
