--- a/Batallion/src/app/nav-bar/nav-bar.component.html
+++ b/Batallion/src/app/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#" style="color: yellow; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 40px;margin-left: 50px">BATALION</a>
+            <a class="navbar-brand" href="#" style="color: yellow; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 40px;">BATALION</a>
           </div>
           <ul class="nav navbar-nav">
-            <li class="active" style="margin-left: 40px"><a href="#">Home</a></li>
+            <li style="margin-left: 40px"><a href="#">Home</a></li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" >Products
               <span class="caret"></span></a>
@@ -19,7 +19,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a [routerLink]="['login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
         </div>
       </nav>
