changed the carousel

--- a/Batallion/src/app/home/home.component.css
+++ b/Batallion/src/app/home/home.component.css
@@ -1,7 +1,9 @@
 
   
-  .carousel {
-    width:640px;
-    height:360px;
+  .caroqusel {
+    width:1000px;
+    height:400px;
   }
-  
+  .carousel-inner img {
+    margin: auto;
+  }
