index margin updated

--- a/Batallion/src/app/home/home.component.css
+++ b/Batallion/src/app/home/home.component.css
@@ -1,8 +1,8 @@
 
   
-  .caroqusel {
-    width:1000px;
-    height:400px;
+  .caroustel {
+    width:640px;
+    height:320px;
   }
   .carousel-inner img {
     margin: auto;
