--- a/Batallion/src/styles.css
+++ b/Batallion/src/styles.css
@@ -6,3 +6,11 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+body {
+    background-color: black;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
