--- a/Batallion/src/app/data/inventory-data.component.html
+++ b/Batallion/src/app/data/inventory-data.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table style="width: 100%;color: white" class="table table-bordered">
+    <table style="width: 100%;color: white" class="table table-bordered table-dark table-striped">
         <tr>
             <th>No.</th>
             <th>Name</th>
