--- a/Batallion/src/app/inventory-control/inventory.component.html
+++ b/Batallion/src/app/inventory-control/inventory.component.html
@@ -11,15 +11,16 @@
         <table name=table1>
             <tr>
 
-                <td><button name="category1" class="button">category1</button></td>
-                <td><button name="category2" class="button">category2</button></td>
-                <td><button name="category3" class="button">category3</button></td>
-                <td><button name="category4" class="button">category4</button></td>
-                <td><button name="category5" class="button">category5</button></td>
-                <td><button name="category6" class="button">category6</button></td>
-                <td><button name="category7" class="button">category7</button></td>
+                <td><button name="category1" class="button">Silencers</button></td>
+                <td><button name="category2" class="button">Accessories</button></td>
+                <td><button name="category3" class="button">Lubricants</button></td>
+                <td><button name="category4" class="button">Riding Kits</button></td>
+                <td><button name="category5" class="button">Crash guards</button></td>
+                <td><button name="category6" class="button">Helmets</button></td>
+                <td><button name="category7" class="button">HeadLights</button></td>
                 <td><button name="category8" class="button">category8</button></td>
                 <td><button name="category9" class="button">category9</button></td>
+                
             </tr>
         </table>
        <br>
