--- a/Batallion/src/app/inventory-control/inventory.component.html
+++ b/Batallion/src/app/inventory-control/inventory.component.html
@@ -11,7 +11,7 @@
         <table name=table1>
             <tr>
 
-                <td><button name="category1" class="button">Silencers</button></td>
+                <td><button name="category1" class="button" click="OpenSilencers()">Silencers</button></td>
                 <td><button name="category2" class="button">Accessories</button></td>
                 <td><button name="category3" class="button">Lubricants</button></td>
                 <td><button name="category4" class="button">Riding Kits</button></td>
@@ -20,14 +20,14 @@
                 <td><button name="category7" class="button">HeadLights</button></td>
                 <td><button name="category8" class="button">category8</button></td>
                 <td><button name="category9" class="button">category9</button></td>
-                
+
             </tr>
         </table>
-       <br>
+        <br>
         <inv-data></inv-data>
     </div>
 
-    
-        
-    
+
+
+
 </div>
