--- a/Batallion/src/app/inventory-control/inventory.component.html
+++ b/Batallion/src/app/inventory-control/inventory.component.html
@@ -7,11 +7,20 @@
         <div><span>
                 <hr></span></div>
         <br>
-
-        <table name=table1>
+        <div class="btn-group" style="width: 100%">
+            <button type="button" class="btn btn-primary">Silencers</button>
+            <button type="button" class="btn btn-primary">Accessories</button>
+            <button type="button" class="btn btn-primary">Lubricants</button>
+            <button type="button" class="btn btn-primary">Riding Gears</button>
+            <button type="button" class="btn btn-primary">Crash guards</button>
+            <button type="button" class="btn btn-primary">Helmets</button>
+            <button type="button" class="btn btn-primary">HeadLights</button>
+            
+          </div>
+        <!--<table name=table1>
             <tr>
 
-                <td><button name="category1" class="button" click="OpenSilencers()">Silencers</button></td>
+                <td><button name="category1" class="button" (click)="OpenSilencers()">Silencers</button></td>
                 <td><button name="category2" class="button">Accessories</button></td>
                 <td><button name="category3" class="button">Lubricants</button></td>
                 <td><button name="category4" class="button">Riding Kits</button></td>
@@ -22,7 +31,7 @@
                 <td><button name="category9" class="button">category9</button></td>
 
             </tr>
-        </table>
+        </table> -->
         <br>
         <inv-data></inv-data>
     </div>
