--- a/Batallion/src/app/data/inventory-data.component.html
+++ b/Batallion/src/app/data/inventory-data.component.html
@@ -41,8 +41,27 @@
 
     </div>
 
-
-    <inv-thumb [product1]="product"></inv-thumb>
+    <div>
+        <table style="width: 100%;color: white" class="table table-bordered table-dark table-striped" >
+            <tr>
+                <th>No.</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>InStock</th>
+                <th>Image</th>
+            </tr>
+            <tr  *ngFor="let prod of product"  >
+                <td>{{prod.id}}</td>
+                <td>{{prod.name}}</td>
+                <td>{{prod.price}}</td>
+                <td>{{prod.instock}}</td>
+                <td>{{prod.image}}</td>
+            </tr>
+        </table>
+    </div>
+    
+    
+    <!-- <inv-thumb [product1]="product"></inv-thumb> -->
 
 </div>
 <!-- <td>{{product.id}}</td>
