--- a/Batallion/src/app/nav-bar/nav-bar.component.html
+++ b/Batallion/src/app/nav-bar/nav-bar.component.html
@@ -15,12 +15,15 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['product']">Products</a>
       </li>
-      
+      <li><i class="fas fa-users"></i></li>
     </ul>
+    
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <div style="margin-right:5px"><button class="btn btn-primary" type="submit">Search</button></div>
-      <div><button class="btn btn-primary" type="button" [routerLink]="['login']">login</button></div>
+      <div>
+          
+        <button class="btn btn-primary" type="button" [routerLink]="['login']">login</button></div>
     </form>
   </div>
 </nav>
